--- a/style.css
+++ b/style.css
@@ -124,9 +124,15 @@ section {
   flex-direction: column;
   justify-content: left;
   width: 100%; }
+  #resume .resume-section h2 {
+    margin-top: 20px;
+    margin-bottom: 20px; }
 #resume .resume-section-title {
   font-family: "Quicksand", sans-serif;
   font-weight: 600; }
+#resume .resume-section-body {
+  margin-top: 20px;
+  margin-bottom: 20px; }
 
 #technologies .col {
   display: flex;
